<?xml version="1.0"?>
<package>
  <name>busroute</name>
  <version>1.0.0</version>
  <description>The busroute package</description>


  <maintainer email="etpe19@student.aau.dk">Emil Tribler Pedersen</maintainer>
  <maintainer email="jfalk19@student.aau.dk">Jonathan Falk</maintainer>
  <maintainer email="shanon19@student.aau.dk">San Sami Hanona</maintainer>
  <maintainer email="sgaasd19@student.aau.dk">Simon Sunesen Gaasdal</maintainer>


  <license>BSD</license>


  <maintainer email="etpe19@student.aau.dk">Emil Tribler Pedersen</maintainer>
  <maintainer email="jfalk19@student.aau.dk">Jonathan Falk</maintainer>
  <maintainer email="shanon19@student.aau.dk">San Sami Hanona</maintainer>
  <maintainer email="sgaasd19@student.aau.dk">Simon Sunesen Gaasdal</maintainer>


  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
 
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>actionlib</run_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <export>

     </export>
</package>